testsuite/tests/linear/should_fail/LinearLet.stderr

LinearLet.hs:5:3: error:
    • Couldn't match expected multiplicity ‘'One’ of variable ‘x’ with actual multiplicity ‘'Omega’
    • In an equation for ‘f’: f x = let y = x in (y, y)
